logs/django-cv.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/PyPDF2'...
Listing './lib/python3.5/site-packages/PyPDF2-1.26.0.egg-info'...
Listing './lib/python3.5/site-packages/curriculum'...
Listing './lib/python3.5/site-packages/curriculum/admin'...
Listing './lib/python3.5/site-packages/curriculum/migrations'...
Listing './lib/python3.5/site-packages/curriculum/models'...
Listing './lib/python3.5/site-packages/curriculum/revealjs'...
Listing './lib/python3.5/site-packages/curriculum/revealjs/migrations'...
Listing './lib/python3.5/site-packages/curriculum/revealjs/static'...
Listing './lib/python3.5/site-packages/curriculum/revealjs/static/css'...
Listing './lib/python3.5/site-packages/curriculum/revealjs/static/fonts'...
Listing './lib/python3.5/site-packages/curriculum/revealjs/static/js'...
Listing './lib/python3.5/site-packages/curriculum/revealjs/templates'...
Listing './lib/python3.5/site-packages/curriculum/templates'...
Listing './lib/python3.5/site-packages/curriculum/templates/curriculum'...
Listing './lib/python3.5/site-packages/curriculum/templatetags'...
Listing './lib/python3.5/site-packages/curriculum/tests'...
Listing './lib/python3.5/site-packages/django_cv-0.7.egg-info'...
Listing './lib/python3.5/site-packages/html5lib'...
Listing './lib/python3.5/site-packages/html5lib/_trie'...
Listing './lib/python3.5/site-packages/html5lib/filters'...
Listing './lib/python3.5/site-packages/html5lib/treeadapters'...
Listing './lib/python3.5/site-packages/html5lib/treebuilders'...
Listing './lib/python3.5/site-packages/html5lib/treewalkers'...
Listing './lib/python3.5/site-packages/html5lib-1.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/qrcode'...
Listing './lib/python3.5/site-packages/qrcode/image'...
Listing './lib/python3.5/site-packages/qrcode/tests'...
Listing './lib/python3.5/site-packages/qrcode-5.3.dist-info'...
Listing './lib/python3.5/site-packages/reportlab'...
Listing './lib/python3.5/site-packages/reportlab/.libs'...
Listing './lib/python3.5/site-packages/reportlab/fonts'...
Listing './lib/python3.5/site-packages/reportlab/graphics'...
Listing './lib/python3.5/site-packages/reportlab/graphics/barcode'...
Listing './lib/python3.5/site-packages/reportlab/graphics/charts'...
Listing './lib/python3.5/site-packages/reportlab/graphics/samples'...
Listing './lib/python3.5/site-packages/reportlab/graphics/widgets'...
Listing './lib/python3.5/site-packages/reportlab/lib'...
Listing './lib/python3.5/site-packages/reportlab/pdfbase'...
Listing './lib/python3.5/site-packages/reportlab/pdfgen'...
Listing './lib/python3.5/site-packages/reportlab/platypus'...
Listing './lib/python3.5/site-packages/reportlab-3.4.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/testapp'...
Listing './lib/python3.5/site-packages/tests/testapp/fixtures'...
Listing './lib/python3.5/site-packages/webencodings'...
Listing './lib/python3.5/site-packages/webencodings-0.5.1.dist-info'...
Listing './lib/python3.5/site-packages/xhtml2pdf'...
Compiling './lib/python3.5/site-packages/xhtml2pdf/context.py'...
***   File "./lib/python3.5/site-packages/xhtml2pdf/context.py", line 167
    if not bold and fweight <> "normal":
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xhtml2pdf/paragraph.py'...
***   File "./lib/python3.5/site-packages/xhtml2pdf/paragraph.py", line 291
    print "Line", 40 * "-"
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/xhtml2pdf/paragraph2.py'...
***   File "./lib/python3.5/site-packages/xhtml2pdf/paragraph2.py", line 347
    print "Line", 40 * "-"
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/xhtml2pdf/pisa.py'...
***   File "./lib/python3.5/site-packages/xhtml2pdf/pisa.py", line 90
    print USAGE
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/xhtml2pdf/reportlab_paragraph.py'...
***   File "./lib/python3.5/site-packages/xhtml2pdf/reportlab_paragraph.py", line 981
    print id(self), "wrap"
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xhtml2pdf/util.py'...
***   File "./lib/python3.5/site-packages/xhtml2pdf/util.py", line 302
    raise Exception, "box not defined right way"
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xhtml2pdf/w3c'...
Compiling './lib/python3.5/site-packages/xhtml2pdf/w3c/cssDOMElementInterface.py'...
***   File "./lib/python3.5/site-packages/xhtml2pdf/w3c/cssDOMElementInterface.py", line 71
    def matchesNode(self, (namespace, tagName)):
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xhtml2pdf/w3c/cssSpecial.py'...
***   File "./lib/python3.5/site-packages/xhtml2pdf/w3c/cssSpecial.py", line 253
    print "~", part, parts, oparts, declarations
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/xhtml2pdf/wsgi.py'...
***   File "./lib/python3.5/site-packages/xhtml2pdf/wsgi.py", line 60
    print headers
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/xhtml2pdf/xhtml2pdf_reportlab.py'...
***   File "./lib/python3.5/site-packages/xhtml2pdf/xhtml2pdf_reportlab.py", line 362
    raise et, ev, tb
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xhtml2pdf-0.0.6.egg-info'...
Listing './share'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/python-wheels'...
